core/src/testing/hnnlo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: grazzini-hnnlo
  namespace: cortexflow
  labels:
    app: grazzini-hnnlo
spec:
  hostPID: true
  hostNetwork: true
  containers:
    - name: grazzini-hnnlo
      image: lorenzotettamanti/hnnlo_setup:latest
      command: ["/bin/bash", "-c", "sleep 3600"]
      securityContext:
        privileged: false
        allowPrivilegeEscalation: false
