core/src/testing/identity.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-identity
  namespace: cortexflow
  labels:
    app: cortexflow-identity
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortexflow-identity
  template:
    metadata:
      labels:
        app: cortexflow-identity
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: identity
          image: ghcr.io/cortexflow/identity:0.1.2
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Running on kernel $(uname -r)"
              if [ ! -d "/sys/fs/bpf" ]; then
                echo "ERROR: BPF filesystem not mounted"
                exit 1
              else
                echo "Checking ebpf path..."
                ls -l /sys/fs/bpf
              fi
              echo "checking privileges"
              ls -ld /sys/fs/bpf

              echo "Running application..."
              exec /usr/local/bin/cortexflow-identity-service || echo "Application exited with code $?"
          resources:
              limits:
                cpu: "1"
                memory: "200Mi"
              requests:
                cpu: "1"
                memory: "100Mi"
          volumeMounts:
            - name: bpf
              mountPath: /sys/fs/bpf
              mountPropagation: Bidirectional
              readOnly: false
            - name: kernel-dev
              mountPath: /lib/modules
              readOnly: false
            - name: cgroup
              mountPath: /sys/fs/cgroup
              readOnly: true
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - SYS_RESOURCE
                - BPF
                - SYS_PTRACE
        - name: bpftool-control-manager
          image: danielpacak/bpftool-runner:latest
          command: ["/bin/bash", "-c","sleep infinity"]
          volumeMounts:
            - name: bpf
              mountPath: /sys/fs/bpf
              mountPropagation: Bidirectional
              readOnly: false
            - name: kernel-dev
              mountPath: /lib/modules
              readOnly: false
            - name: cgroup
              mountPath: /sys/fs/cgroup
              readOnly: true
          resources:
            limits:
              cpu: "1"
              memory: "200Mi"
            requests:
              cpu: "1"
              memory: "100Mi"
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - SYS_RESOURCE
                - BPF
                - SYS_PTRACE
      volumes:
        - name: bpf
          hostPath:
            path: /sys/fs/bpf
            type: Directory
        - name: kernel-dev
          hostPath:
            path: /lib/modules
            type: Directory
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
            type: Directory
