core/src/testing/metrics.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-metrics-cache-5s
  namespace: cortexflow
  labels:
    app: cortexflow-metrics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortexflow-metrics
  template:
    metadata:
      labels:
        app: cortexflow-metrics
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: metrics
          image: lorenzotettamanti/cortexflow-metrics:0.1.1-cache-5s-update-6
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Running on kernel $(uname -r)"
              if [ ! -d "/sys/fs/bpf" ]; then
                echo "ERROR: BPF filesystem not mounted"
                exit 1
              else
                echo "Checking ebpf path..."
                ls -l /sys/fs/bpf
              fi
              echo "checking privileges"
              ls -ld /sys/fs/bpf

              echo "Running application..."
              exec /usr/local/bin/cortexflow-metrics || echo "Application exited with code $?"
          volumeMounts:
            - name: bpf
              mountPath: /sys/fs/bpf
              mountPropagation: Bidirectional
              readOnly: false
            - name: proc
              mountPath: /host/proc
              readOnly: false
            - name: kernel-dev
              mountPath: /lib/modules
              readOnly: false
            - name: tracefs
              mountPath: /sys/kernel/debug
              readOnly: false
            - name: cgroup
              mountPath: /host/sys/fs/cgroup
              readOnly: true
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - SYS_RESOURCE
                - BPF
                - SYS_PTRACE
        - name: bpftool-control-manager
          image: danielpacak/bpftool-runner:latest
          command: ["/bin/bash", "-c", "sleep infinity"]
          volumeMounts:
            - name: bpf
              mountPath: /sys/fs/bpf
              mountPropagation: Bidirectional
              readOnly: false
            - name: proc
              mountPath: /host/proc
              readOnly: false
            - name: kernel-dev
              mountPath: /lib/modules
              readOnly: false
            - name: tracefs
              mountPath: /sys/kernel/debug
              readOnly: false
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - SYS_RESOURCE
                - BPF
                - SYS_PTRACE
      volumes:
        - name: bpf
          hostPath:
            path: /sys/fs/bpf
            type: Directory
        - name: proc
          hostPath:
            path: /proc
            type: Directory
        - name: kernel-dev
          hostPath:
            path: /lib/modules
            type: Directory
        - name: tracefs
          hostPath:
            path: /sys/kernel/debug
            type: Directory
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
            type: Directory
