core/src/testing/agent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-agent
  namespace: cortexflow
  labels:
    app: cortexflow-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortexflow-agent
  template:
    metadata:
      labels:
        app: cortexflow-agent
    spec:
      hostPID: true
      hostNetwork: true
      containers:
        - name: agent
          image: lorenzotettamanti/cortexflow-agent:veth-command-test4
          command: ["/bin/bash", "-c"]
          args:
            - |
              echo "Running on kernel $(uname -r)"
              if [ ! -d "/sys/fs/bpf" ]; then
                echo "ERROR: BPF filesystem not mounted"
                exit 1
              else
                echo "Checking ebpf path..."
                ls -l /sys/fs/bpf
              fi
              echo "checking privileges"
              ls -ld /sys/fs/bpf

              echo "checking if conntracker path"
              ls -l /usr/src/cortexbrain-agent/conntracker

              echo "checking if the bpf maps are reachable"
              ls -l /sys/fs/bpf/maps

              echo "Running application..."
              exec /usr/local/bin/agent-api || echo "Application exited with code $?"
          volumeMounts:
            - name: bpf
              mountPath: /sys/fs/bpf
              mountPropagation: Bidirectional
              readOnly: false
            - name: proc
              mountPath: /host/proc
              readOnly: false
            - name: kernel-dev
              mountPath: /lib/modules
              readOnly: false
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              add:
                - SYS_ADMIN
                - NET_ADMIN
                - SYS_RESOURCE
                - BPF
                - SYS_PTRACE
      volumes:
        - name: bpf
          hostPath:
            path: /sys/fs/bpf
            type: Directory
        - name: proc
          hostPath:
            path: /proc
            type: Directory
        - name: kernel-dev
          hostPath:
            path: /lib/modules
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: cortexflow-agent
  namespace: cortexflow
spec:
  selector:
    app: cortexflow-agent
  ports:
  - protocol: TCP
    name: agent-server-port
    port: 9090
    targetPort: 9090
    appProtocol: grpc
  type: ClusterIP
---
