core/src/testing/loadbalancer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-loadbalancer
  namespace: cortexflow
  labels:
    app: cortexflow-loadbalancer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortexflow-loadbalancer
  template:
    metadata:
      labels:
        app: cortexflow-loadbalancer
    spec:
      hostPID: true
      #initContainers:
      #- name: fix-bpf-permissions
      #  image: busybox
       # command:
       # - sh
       # - -c
       # - |
       #   echo "Setting bpf permissions"
       #   chmod 777 /sys/fs/bpf

        #  chown root:root /sys/fs/bpf
        #  ls -ld /sys/fs/bpf /sys/fs/bpf
        #  echo "Done setting up /sys/fs/bpf"
        #volumeMounts:
       # - name: bpf
        #  mountPath: /sys/fs/bpf
        #  mountPropagation: Bidirectional
        #  readOnly: false
        #securityContext:
         # privileged: true
      containers:
      - name: loadbalancer
        image: lorenzotettamanti/cortexflow-loadbalancer:latest
        command: ["/bin/bash", "-c"]
        args:
          - |
            echo "Running on kernel $(uname -r)"
            if [ ! -d "/sys/fs/bpf" ]; then
              echo "ERROR: BPF filesystem not mounted"
              exit 1
            else
              echo "Checking ebpf path..."
              ls -l /sys/fs/bpf
            fi
            echo "checking privilegi"
            ls -ld /sys/fs/bpf
            
            echo "Avvio dell'applicazione principale..."
            exec /usr/local/bin/cortexflow-loadbalancer || echo "Application exited with code $?"
        ports:
        - containerPort: 9090
          protocol: TCP
        - containerPort: 5053
          protocol: UDP
        - containerPort: 5054
          protocol: TCP
        volumeMounts:
        - name: proxy-config
          mountPath: /etc/proxy/config.yaml
          subPath: config.yaml
        - name: bpf
          mountPath: /sys/fs/bpf
          mountPropagation: Bidirectional
          readOnly: false
        - name: proc
          mountPath: /host/proc
          readOnly: false
        - name: kernel-dev
          mountPath: /lib/modules
          readOnly: false
        securityContext:
          privileged: true
          allowPrivilegeEscalation: true
          capabilities:
            add:
            - SYS_ADMIN
            - NET_ADMIN
            - SYS_RESOURCE
            - CAP_BPF
            - SYS_PTRACE
      volumes:
      - name: proxy-config
        configMap:
          name: cortexbrain-client-config
          items:
          - key: config.yaml
            path: config.yaml
      - name: bpf
        hostPath:
          path: /sys/fs/bpf
          type: Directory
      - name: proc
        hostPath:
          path: /proc
          type: Directory
      - name: kernel-dev
        hostPath:
          path: /lib/modules
          type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: loadbalancer
  namespace: cortexflow
  labels:
    app: cortexflow-loadbalancer
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  - name: udp
    port: 5053
    targetPort: 5053
    protocol: UDP
  - name: tcp
    port: 5054
    targetPort: 5054
    protocol: TCP
  selector:
    app: cortexflow-loadbalancer
