core/src/testing/otel_agent.yaml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: otel-agent
  namespace: cortexflow
  labels:
    app: opentelemetry
    component: otel-agent
spec:
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-agent
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-agent
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - name: otel-agent
        image: otel/opentelemetry-collector:0.95.0
        command:
          - "/otelcol"
          - "--config=/conf/otel-agent-config.yaml"
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 4317
          hostPort: 4317
          protocol: TCP
        - containerPort: 4318
          hostPort: 4318
          protocol: TCP
        - containerPort: 8889
          hostPort: 8889
          protocol: TCP
        volumeMounts:
        - name: otel-agent-config-vol
          mountPath: /conf
      volumes:
      - name: otel-agent-config-vol
        configMap:
          name: otel-agent-conf
          items:
          - key: otel-agent-config
            path: otel-agent-config.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: otel-collector
  namespace: cortexflow
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  selector:
    app: opentelemetry
    component: otel-collector
  ports:
  - name: otlp-grpc
    port: 4317
    targetPort: 4317
  - name: otlp-http
    port: 4318
    targetPort: 4318
  - name: metrics
    port: 8889
    targetPort: 8889

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otel-collector
  namespace: cortexflow
  labels:
    app: opentelemetry
    component: otel-collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: opentelemetry
      component: otel-collector
  template:
    metadata:
      labels:
        app: opentelemetry
        component: otel-collector
    spec:
      containers:
      - name: otel-collector
        image: otel/opentelemetry-collector:0.95.0
        command:
          - "/otelcol"
          - "--config=/conf/otel-collector-config.yaml"
        resources:
          limits:
            cpu: "1"
            memory: 2Gi
          requests:
            cpu: 200m
            memory: 400Mi
        ports:
        - containerPort: 4317
        - containerPort: 4318
        - containerPort: 8889
        volumeMounts:
        - name: otel-collector-config-vol
          mountPath: /conf
      volumes:
      - name: otel-collector-config-vol
        configMap:
          name: otel-collector-conf
          items:
          - key: otel-collector-config
            path: otel-collector-config.yaml
