core/src/testing/proxy-injector.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-injector
  namespace: cortexflow
spec:
  ports:
  - port: 443
    targetPort: 9443
  selector:
    app: proxy-injector
---
apiVersion: v1
kind: Pod
metadata:
  name: proxy-injector
  namespace: cortexflow
  labels:
    app: proxy-injector
spec:
  containers:
  - name: proxy-injector
    image: lorenzotettamanti/cortexflow-proxy-injector:latest
    ports:
    - containerPort: 9443
    volumeMounts:
    - name: webhook-certs
      mountPath: /etc/webhook/certs
      readOnly: true
  volumes:
  - name: webhook-certs
    secret:
      secretName: proxy-injector-tls
