core/src/testing/proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cortexflow-proxy
  namespace: cortexflow
  labels:
    app: cortexflow-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cortexflow-proxy
  template:
    metadata:
      labels:
        app: cortexflow-proxy
    spec:
      containers:
      - name: proxy-sidecar
        image: lorenzotettamanti/cortexflow-proxy:latest
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: proxy-config
          mountPath: /etc/proxy/config.yaml
          subPath: config.yaml
      volumes:
      - name: proxy-config
        configMap:
          name: cortexbrain-client-config
          items:
          - key: config.yaml
            path: config.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  namespace: cortexflow
  labels:
    app: cortexflow-proxy
spec:
  type: ClusterIP
  ports:
  - name: metrics
    port: 9090
    targetPort: 9090
    protocol: TCP
  - name: dns
    port: 5053
    targetPort: 5053
    protocol: UDP
  selector:
    app: cortexflow-proxy
