core/src/testing/admission-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: proxy-injector
webhooks:
- name: "proxy-injector.cortexflow.svc"
  admissionReviewVersions:
  - v1
  sideEffects: None
  timeoutSeconds: 30
  objectSelector:
    matchLabels:
      proxy-injection: enabled
  clientConfig:
    service:
      name: proxy-injector
      namespace: cortexflow
      path: /mutate
      port: 443
    caBundle: #omitted
  failurePolicy: Fail
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
